# planck-refactored

./: .clang-format  .flake8  .gitignore  BUGREPORT_CASSCF.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  SA_CASSCF_PATH_FORWARD.md  basis.py  benchmark_results.txt  casscf_benchmark_results.txt  cyclohexane.hfchk  cyclohexane.hfinp  dihydrogen.hfchk  dihydrogen.hfinp  test.sh  val_ch4.hfinp  val_h2.hfinp  val_he.hfinp  val_hf.hfinp  val_lih.hfinp  val_nh3.hfinp  val_water.hfinp  water.hfchk  water.hfinp  water_mo5_alpha.cube
.github/workflows/: callgraph.yml  cmake-multi-platform.yml  main.yml
basis-sets/: 4-31G  5-21G  6-31++G**-J  6-31+G*-J  6-311++G(2d,2p)  6-311++G(3df,3pd)  6-311++G**-J  6-311+G(2d,p)  6-311+G*-J  6-311G(2df,2pd)  6-311G(d,p)  6-311G**-RIFIT  6-311G-J  6-311xxG(d,p)  6-31G(2df,p)  6-31G(3df,3pd)  6-31G(d,p)  STO-3G*  aug-cc-pCV5Z  aug-cc-pCVDZ  aug-cc-pCVQZ  aug-cc-pCVTZ  aug-cc-pV6Z  aug-cc-pV7Z  basis  cc-pCV5Z  cc-pCVDZ  cc-pCVQZ  cc-pCVTZ  cc-pV6Z  cc-pV8Z  cc-pV9Z  cc-pVDZ-unc
cmake/: fetch_basis.cmake
docs/: ARCHITECTURE.md  BUG_REPORT.md  CASSCF_ACTIVE_CACHE_PATCH_SERIES.md  CASSCF_STATUS.md  CCGEN_TEACHING_GUIDE.md  PLANCK_TEACHING_GUIDE.md  README.md  architecture.html  build_architecture_site.py  build_teaching_site.py  casscf_numeric_newton_analysis.md  casscf_remaining_work.md  ccgen.html  index.html  plan_unified_sa_casscf.md
docs/bug_reports/: casscf_orbital_plateau.md
docs/site/: index.html
python/: COLAB.md  INTERMEDIATES_PROPOSAL.md  README.md  generate_ccsdt_cpp.py  generate_planck_cc_kernels.py  generate_spinorbital_ccsd_warm_start.py  pyproject.toml  setup.py
python/ccgen/: __init__.py  _wickaccel.cpp  algebra.py  bench.py  canonicalize.py  cli.py  cluster.py  connectivity.py  expr.py  generate.py  hamiltonian.py  indices.py  project.py  sqops.py  tensor_ir.py  tensors.py  wick.py
python/ccgen/emit/: __init__.py  cpp_loops.py  einsum.py  planck_rccsd_warm_start.py  planck_tensor_cpp.py  pretty.py
python/ccgen/lowering/: __init__.py  restricted_closed_shell.py
python/ccgen/methods/: __init__.py  ccd.py  ccsd.py  ccsdt.py
python/ccgen/optimization/: __init__.py  intermediates.py  permutation.py  subexpression.py  symmetry.py
python/ccgen/tests/: __init__.py  test_optimizations.py  test_regressions.py
scripts/: sync-memory.sh  vault_to_claude.py
src/: driver.cpp
src/base/: basis.h  basis.h.in  planck_exceptions.hpp  planck_geometry.hpp  planck_input.hpp  planck_interface.hpp  planck_main.cpp  tables.h  types.h
src/basis/: basis.cpp  basis.h  gaussian.cpp
src/dft/: ao_grid.h  dft_gradient.cpp  dft_gradient.h  driver.cpp  driver.h  ks_matrix.cpp  ks_matrix.h  main.cpp  xc_grid.cpp  xc_grid.h
src/dft/base/: angular.h  grid.h  radial.h  wrapper.h
src/freq/: hessian.cpp  hessian.h
src/gradient/: gradient.cpp  gradient.h
src/integrals/: base.h  boys.h  md.h  os.cpp  os.h  rys.cpp  rys.h  rys_roots.cpp  rys_roots.h  shellpair.cpp  shellpair.h  tho.cpp  tho.h
src/io/: checkpoint.cpp  checkpoint.h  io.cpp  io.h  logging.h
src/lookup/: boys.cpp  boys.h  elements.cpp  elements.h  numeric.h
src/opt/: geomopt.cpp  geomopt.h  intcoords.cpp  intcoords.h
src/populations/: bond-order.cpp  lodwin.cpp  mulliken.cpp  multipole.cpp  multipole.h  population.h  population_detail.h
src/post_hf/: casscf.cpp  casscf.h  casscf_internal.h  cc.h  integrals.cpp  integrals.h  mp2.cpp  mp2.h  mp2_gradient.cpp  mp2_gradient.h  rhf_response.cpp  rhf_response.h
src/post_hf/casscf/: aug-hessian-orbital.cpp  aug-hessian-orbital.h  aug-hessian.cpp  aug-hessian.h  casscf.cpp  casscf.h  casscf_driver_internal.cpp  casscf_driver_internal.h  casscf_utils.h  ci.cpp  ci.h  orbital.cpp  orbital.h  rdm.cpp  rdm.h  response.cpp  response.h  strings.cpp  strings.h
src/post_hf/cc/: THIRD_PARTY_LICENSES.md  amplitudes.cpp  amplitudes.h  ccsd.cpp  ccsd.h  ccsdt.cpp  ccsdt.h  ccsdtq.cpp  ccsdtq.h  common.cpp  common.h  determinant_space.cpp  determinant_space.h  diis.cpp  diis.h  generated_arbitrary_prepare.cpp  generated_arbitrary_runtime.cpp  generated_arbitrary_runtime.h  generated_kernel_registry.cpp  generated_kernel_registry.h  mo_blocks.cpp  mo_blocks.h  solver_arbitrary.cpp  (+7 more)
src/scf/: population.cpp  population.h  sad.cpp  sad.h  scf.cpp  scf.h  stability.cpp  stability.h
src/solvation/: pcm.cpp  pcm.h
src/symmetry/: integral_symmetry.cpp  integral_symmetry.h  mo_symmetry.cpp  mo_symmetry.h  symmetry.cpp  symmetry.h  vibrational_symmetry.cpp  vibrational_symmetry.h  wrapper.h
tests/: README.md  casscf_internal.cpp  cc_arbitrary_solver.cpp  dft_gradient_fd.py  dft_grid_invariants.cpp  multipole_integrals.cpp  population_analysis.cpp  regression_cases.json  run_regressions.py
tests/inputs/: ethylene_rhf_ccpvdz_rys.hfinp  h2_optfreq.hfinp  h2_rmp2_gradient.hfinp  water_freq_symmetry.hfinp
tests/pyscf/: README.md  b_uccsdt_sto3g.py  bh3_rccsdt_sto3g.py  cases.json  compare_rccsdt_backends.py  diagnose_bh3_tensor_terms.py  diagnose_water_sa2_basin.py  ethylene_cas44_sto3g_sa2.py  ethylene_casscf_321g.py  ethylene_casscf_321g_nroot2.py  ethylene_casscf_ccpvdz.py  generate_regression_references.py  h2_cas22_sto3g.py  h2_rccsd_sto3g.py  lih_cas22_sto3g.py  lih_rccsdt_sto3g.py  regression_reference_cases.json  regression_references.json  run_all.py  water_cas44_631g.py  water_cas44_b1.py  water_cas44_ccpvdz.py  water_cas44_sto3g.py  water_cas44_sto3g_sa2.py
tools/: chkdump.cpp  clang-format-house  reformat.sh  run-clang-tidy.sh
vault/: 00 - Index.md
vault/.obsidian/: app.json  graph.json
vault/Architecture/: Build System.md  Data Flow.md  Overview.md  Type System.md
vault/Gotchas/: Coordinate Units.md  Error Handling Pattern.md  Norm Factors.md  Shell Pair Indexing.md
vault/Implementation/: CASSCF and SA-CASSCF.md  Coupled Cluster.md  DFT.md  Gradients and GeomOpt.md  Integral Engine.md  SCF and DIIS.md
vault/Status/: Completion.md  Open Work.md
visualizer/: __init__.py  __main__.py  app.py  molecule3d.py  parser.py  test_molecule3d.py  test_parser.py  visualize.py
visualizer/templates/: index.html
(+125 files in other folders)
